--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development node app.js",
-    "start:prod": "NODE_ENV=production node app.js",
-    "start:stage": "NODE_ENV=staging node app.js"
+    "start": "NODE_ENV=development node server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "start:stage": "NODE_ENV=staging node server.js"
   },
   "author": "Harshit Gupta",
   "license": "ISC",
